openmediavault (0.5.36) stable; urgency=low

  * Update locales.
  * Various improvements.
  * Add option to fix RRD database files in omv-firstaid.
  * Mantis 0000990: Redirect permanent to https option for apache.
  * Mantis 0000993: Groups with space not displayed correctly.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Feb 2014 01:02:16 +0100

openmediavault (0.5.35) stable; urgency=low

  * Update locales.
  * Improve SMB recycle dir cron-script.
  * Mantis 0000845: Fix postfix issue.
  * Mantis 0000978: FAQ Link no more available.
  * Mantis 0000984: Removing iptables rules corrupts configuration.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 07 Feb 2014 12:18:24 +0100

openmediavault (0.5.34) stable; urgency=low

  * Update locales.
  * Fix remote grid sorting issue.
  * Add environment variable OMV_PLUGIN_ENUMERATE_GET_REPOSITORY. Set to TRUE
    to determine the repository of the plugin. Because this process is time
    consuming this defaults to FALSE.
  * Mantis 0000867: Cache for System -> Plugins.
  * Mantis 0000917: Followup to 913 plugin error.
  * Mantis 0000966: Automatically reload page after plugin installation or
    deletion.
  * Mantis 0000967: Convert fstab mkconf to use run-parts.
  * Mantis 0000973: Fix issue in OMVFilesystem to get correct filesystem
    statistics.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 02 Feb 2014 20:33:58 +0100

openmediavault (0.5.33) stable; urgency=low

  * Update locales.
  * Mantis 0000969: Sortable Columns do not work everywhere in the WebGUI.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 01 Feb 2014 21:42:49 +0100

openmediavault (0.5.32) stable; urgency=low

  * Update locales.
  * Fix and improve various issues.
  * Add environment variable OMV_USERMGMT_ENUMERATE_USER_ROOT. Set to FALSE in
    /etc/default/openmediavault to do not list the user 'root' in the WebGUI.
    Defaults to TRUE.