@@ -5,6 +5,7 @@ openmediavault (0.5.36) stable; urgency=low
   * Add option to fix RRD database files in omv-firstaid.
   * Mantis 0000990: Redirect permanent to https option for apache.
   * Mantis 0000993: Groups with space not displayed correctly.
+  * Mantis 0000995: Display extended S.M.A.R.T. information.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Feb 2014 01:02:16 +0100
 
